--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,8 @@
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
+{#        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>#}
+        <script src="https://code.jquery.com/jquery-3.6.4.js"></script>
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
