--- a/templates/comment/__comment.html.twig
+++ b/templates/comment/__comment.html.twig
@@ -1,9 +1,7 @@
-<div id="comment_{{ comment.id }}" style="padding: 5px 20px; display: flex; flex-direction: column">
-    <div style="padding: 5px 0">Author: {{ comment.author }}</div>
-{#    <div style="padding: 5px 0">Rang: {{ comment.rang }}</div>#}
-{#    <div style="padding: 5px 0">Id: {{ comment.id }}</div>#}
-    <div style="padding: 5px 0"><span>Comment:</span> <span id="comment_{{ comment.id }}_text" >{{ comment.comment }}</span></div>
-    <div style="margin-top: 15px">
+<div id="comment_{{ comment.id }}" class="comment_block">
+    <div class="comment_field">Author: {{ comment.author }}</div>
+    <div class="comment_field"><span>Comment:</span> <span id="comment_{{ comment.id }}_text" >{{ comment.comment }}</span></div>
+    <div class="comment_button_block">
         <button name="reply_button" data-parent-id="{{ comment.id }}">Ответить</button>
         {% if haveMore == true %}
             <button name="show_more" id="show_more_{{ comment.id }}" data-parent-id="{{ comment.id }}">Показать еще</button>
@@ -17,14 +15,3 @@
         {{ replies|raw }}
     </div>
 </div>
-
-{#<div id="comment_{{ comment.id }}" style="padding: 5px 20px; display: flex; flex-direction: column">#}
-{#    <div style="padding: 5px 0">Author: {{ comment.author }}</div>#}
-{#    <div style="padding: 5px 0">Rang: {{ comment.rang }}</div>#}
-{#    <div style="padding: 5px 0">Id: {{ comment.id }}</div>#}
-{#    <div style="padding: 5px 0">Comment: {{ comment.comment }}</div>#}
-{#    <div style="margin-top: 15px">#}
-{#        <button name="reply_button" data-parent-id="{{ comment.id }}">Ответить</button>#}
-{#        <button>Редактировать</button>#}
-{#    </div>#}
-{#</div>#}
